# ali_mart

./: docker-compose.yaml
ms_2/: pyproject.toml
ms_2/app/: .env  main.py  product_pb2.py
ms_2/app/database/: dbconnection.py
order_service/: Dockerfile
order_service/app/: main.py  product.proto  product_pb2.py
order_service/app/db/: dbconnection.py
order_service/app/kafka/: kafka_consumer.py
order_service/app/schema/: ProductType.py
product_catalog_service/app/: .env  main.py  settings.py
product_catalog_service/app/db/: dbconnection.py
product_catalog_service/app/kafka/: kafka_consumer.py  kafka_producer.py
protocol_buffering/: pyproject.toml
protocol_buffering/app/: ProductSchema.py  main.py
protocol_buffering/app/kafka/: kafka_consumer.py
