[tool.poetry]
name = "protocol-buffering"
version = "0.1.0"
description = ""
authors = ["jawwad-ali <alijawwad001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
aiokafka = "^0.11.0"
protobuf = "^5.27.2"
sqlmodel = "^0.0.19"
psycopg2-binary = "^2.9.9"
psycopg = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
